--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -27,4 +27,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
+    - name: Firebase Deploy
+        run: |
+          sudo npm install -g firebase-tools
+          firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
     #- run: npm test
