--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -28,7 +28,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - name: Firebase Deploy
-        run: |
+    - run: |
           sudo npm install -g firebase-tools
           firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
     #- run: npm test
