--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: npm i
+    - run: npm install -g @ionic/cli 
     - run: npm ci
     - run: npm run build --if-present
     - name: Firebase Deploy
