--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
+    "chart.js": "^2.7.0",
     "firebase": "^8.6.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
