--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@angular/router": "~11.2.0",
     "@angular/service-worker": "^11.2.9",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.33.1",
+    "@ionic-native/geolocation": "^5.33.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
+    "cordova-plugin-geolocation": "^4.1.0",
     "firebase": "^8.6.2",
+    "mapbox-gl": "^2.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -40,7 +44,7 @@
     "@ionic/angular-toolkit": "^3.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.14",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
