--- a/angular.json
+++ b/angular.json
@@ -69,8 +69,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "browserTarget": "app:build"
           },
           "configurations": {
             "production": {
