--- a/package.json
+++ b/package.json
@@ -22,10 +22,20 @@
     "@angular/pwa": "^0.1102.8",
     "@angular/router": "~11.2.0",
     "@angular/service-worker": "^11.2.9",
-    "@capacitor/core": "2.4.7",
+    "@capacitor/android": "^3.0.0",
+    "@capacitor/camera": "^1.0.0",
+    "@capacitor/core": "^3.0.0",
+    "@capacitor/filesystem": "^1.0.0",
+    "@capacitor/storage": "^1.0.0",
+    "@ionic-native/core": "^5.33.1",
+    "@ionic-native/geolocation": "^5.33.1",
+    "@ionic-native/image-picker": "^5.33.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
+    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-telerik-imagepicker": "^2.3.6",
     "firebase": "^8.6.2",
+    "mapbox-gl": "^2.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -36,7 +46,7 @@
     "@angular/compiler": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
     "@angular/language-service": "~11.2.0",
-    "@capacitor/cli": "2.4.7",
+    "@capacitor/cli": "^2.4.7",
     "@ionic/angular-toolkit": "^3.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
