--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cordova-plugin-geolocation": "^4.1.0",
     "firebase": "^8.6.2",
     "mapbox-gl": "^2.3.0",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
