--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
     "@mapbox/mapbox-gl-geocoder": "^4.7.1",
+    "caller-path": "^3.0.1",
     "chart.js": "^2.7.0",
+    "compose-function": "^3.0.3",
     "cordova-plugin-geolocation": "^4.1.0",
+    "es6-iterator": "^2.0.3",
     "firebase": "^8.6.2",
+    "is-directory": "^0.3.1",
     "mapbox-gl": "^2.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
