--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase": "^8.6.2",
     "is-directory": "^0.3.1",
     "mapbox-gl": "^2.3.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
