--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "chart.js": "^2.7.0",
     "compose-function": "^3.0.3",
     "cordova-plugin-geolocation": "^4.1.0",
+    "countries-list": "^2.6.1",
     "es6-iterator": "^2.0.3",
     "firebase": "^8.6.2",
+    "ionic-selectable": "^4.9.0",
     "is-directory": "^0.3.1",
     "mapbox-gl": "^2.3.0",
     "rxjs": "~6.6.0",
