--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/pwa": "^0.1102.8",
     "@angular/router": "~11.2.0",
     "@angular/service-worker": "^11.2.9",
-    "@capacitor/core": "2.4.7",
+    "@capacitor/android": "^2.4.7",
+    "@capacitor/core": "^2.4.7",
     "@ionic-native/core": "^5.33.1",
     "@ionic-native/geolocation": "^5.33.1",
     "@ionic-native/photo-viewer": "^5.33.1",
