--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,7 +22,9 @@
     "@angular/pwa": "^0.1102.8",
     "@angular/router": "~11.2.0",
     "@angular/service-worker": "^11.2.9",
+    "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@capacitor/push-notifications": "^1.0.2",
     "@ionic-native/core": "^5.33.1",
     "@ionic-native/geolocation": "^5.33.1",
     "@ionic-native/photo-viewer": "^5.33.1",
