--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@angular/service-worker": "^11.2.9",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
-    "@capacitor/push-notifications": "^1.0.2",
     "@ionic-native/core": "^5.33.1",
+    "@ionic-native/fcm": "^5.34.0",
     "@ionic-native/geolocation": "^5.33.1",
     "@ionic-native/photo-viewer": "^5.33.1",
     "@ionic/angular": "^5.5.2",
@@ -35,6 +35,7 @@
     "chart.js": "^2.7.0",
     "com-sarriaroman-photoviewer": "^1.2.5",
     "compose-function": "^3.0.3",
+    "cordova-plugin-fcm-with-dependecy-updated": "^7.8.0",
     "cordova-plugin-geolocation": "^4.1.0",
     "countries-list": "^2.6.1",
     "es6-iterator": "^2.0.3",
