testing error bad gateaway

--- a/angular.json
+++ b/angular.json
@@ -69,11 +69,13 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app:build"
+            "browserTarget": "app:build",
+			"proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "app:build:production"
+              "browserTarget": "app:build:production",
+			"proxyConfig": "src/proxy.conf.json"
             },
             "ci": {
               "progress": false
@@ -83,7 +85,8 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "app:build"
+            "browserTarget": "app:build",
+			"proxyConfig": "src/proxy.conf.json"
           }
         },
         "test": {
@@ -145,11 +148,13 @@
         "ionic-cordova-build": {
           "builder": "@ionic/angular-toolkit:cordova-build",
           "options": {
-            "browserTarget": "app:build"
+            "browserTarget": "app:build",
+			"proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "app:build:production"
+              "browserTarget": "app:build:production",
+			"proxyConfig": "src/proxy.conf.json"
             }
           }
         },
